# NYC-Bus-Delays-Weather-Analysis

./: .env  .gitignore  GCP.md  Makefile  README.md  pyproject.toml
airflow/: Dockerfile  Makefile  docker-compose.yaml  requirements.txt
airflow/dags/: bus_weather_pipeline.py
bus_weather_dbt/: Makefile  dbt_project.yml
bus_weather_dbt/.dbt/: profiles.yml
bus_weather_dbt/models/marts/: mart_boro_delay_status.sql  mart_bus_summary.sql  schema.yml
bus_weather_dbt/models/staging/: schema.yml  stg_bus_weather_raw.sql
notebooks/: explore_processed_data.ipynb
scripts/: fetch_from_api.py  fetch_weather.py  load_to_bq.py  upload_to_gcs.py
spark_jobs/: process_data.py  spark_test.py
terraform/: Makefile  main.tf  providers.tf  terraform.tfvars  variables.tf
